<resources>
    <string name="app_name">EMU IT App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_message">Welcome To EMU IT APP</string>
    <string name="welcome_button">Tap To Continue</string>
    <string name="welcome_login">Login</string>

    <string name="title_activity_login">login</string>
    <string name="login_username">Username: </string>
    <string name="login_password">Password: </string>
    <string name="login_button">Login</string>

    <string name="title_activity_admin_panel">Admin Panel</string>
    <string name="title_activity_add_staff_info">Add Staff Info</string>

    <!-- Start Custom Strings -->
    <!-- Staff Details -->
    <string name="empID">Employee ID: </string>
    <string name="fname">Firstname: </string>
    <string name="lname">Lastname: </string>
    <string name="dob">Date Of Birth: </string>
    <string name="email">Email: </string>
    <string name="officeNo">Office No.: </string>
    <string name="phone">Phone No.: </string>
    <string name="purl">Picture: </string>
    <string name="priv">Privilege: </string>
    <string name="save_staff">Save</string>

    <!-- Course Details -->
    <string name="course_id">Course ID:</string>
    <string name="C_name">Course Name:</string>
    <string name="Ref_code">Ref. Code:</string>
    <string name="Emu_credit">EMU Credit: </string>
    <string name="Ects_credit">ECTS Credit: </string>
    <string name="Perequisites">Prerequisites: </string>
    <string name="Lab_Hour">Lab Hour: </string>
    <string name="Lecture_Hour">Lecture Hour: </string>
    <string name="Tutorial_Hour">Tutorial Hour: </string>
    <string name="c_description">Description: </string>
    <string name="cat_id">Category: </string>
    <string name="semester">Semester: </string>
    <string name="save_course">Save</string>

    <!-- Category Details -->
    <string name="Category_ID">Category ID: </string>
    <string name="Category_name">Category Name: </string>
    <string name="cat_Description">Description: </string>
    <string name="save_cat">Save</string>

    <!-- Semester Details -->
    <string name="sem_id">Semester ID:</string>
    <string name="sem_name">Semester Name: </string>
    <string name="session">Session: </string>
    <string name="sem_start_date">Start Date: </string>
    <string name="sem_end_date">End Date: </string>
    <string name="save_Semester">Save</string>

    <!-- Event Details -->
    <string name="event_id">Event ID:</string>
    <string name="event_name">Event Name:</string>
    <string name="event_type">Event Type:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="description">Description: </string>
    <string name="event_sem_id">Semester ID: </string>
    <string name="save_Event">Save</string>

    <!-- Curriculum Details -->
    <string name="c_code">Semester ID:</string>
    <string name="ref_code">Ref. Code:</string>
    <string name="curriculum_name">Course Code:</string>
    <string name="cur_description">Description:</string>
    <string name="save_Curr">Save</string>

    <!-- Photo Details -->
    <string name="photo_id">Photo ID:</string>
    <string name="photo_name">Photo Name:</string>
    <string name="pic">Select Image: </string>
    <string name="selectImg">Browse</string>
    <string name="date">Date:</string>
    <string name="Description">Description:</string>
    <string name="save_photo">Save</string>

    <!-- End Custom Strings -->
    <string name="title_activity_course">Course</string>
    <string name="title_activity_course_category">Course Category</string>
    <string name="title_activity_add_semester">Add Semester</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_add_curriculum">Add Curriculum</string>
    <string name="title_activity_add_picture">AddPicture</string>
    <string name="title_activity_view_category_list">ViewCategoryList</string>
    <string name="title_activity_category_home">Category</string>




    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_categoty_home">Categoty</string>
    <string name="title_activity_edit_category">Edit Category</string>
    <string name="title_activity_view_category_details">ViewCategoryDetails</string>
    <string name="title_activity_delete_course_category">Delete Course Category</string>
    <string name="title_activity_all_category">AllCategory</string>
    <string name="title_activity_staff_home">Staff Home</string>
    <string name="title_activity_event_home">Event Home</string>
    <string name="title_activity_curriculum_home">Curriculum</string>
    <string name="title_activity_course_home">Courses</string>
    <string name="title_activity_gallery_home">Gallery</string>
    <string name="title_activity_semester_home">Semester</string>
    <string name="title_activity_course_details">CourseDetails</string>

</resources>
