<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.testing.softcust.emuitapp.AddStaffInfo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000026"
    android:orientation="vertical"
>

    <TextView
        android:text="@string/empID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtEmpID"
        android:background="#ffffffff"
        android:inputType="text" />

    <TextView
        android:text="@string/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtfname"
        android:background="#ffffffff"
        android:inputType="text" />

    <TextView
        android:text="@string/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtlname"
        android:background="#ffffffff"
        android:inputType="text" />

    <TextView
        android:text="@string/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtDob"
        android:background="#ffffffff"
        android:inputType="text" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtEmail"
        android:background="#ffffffff"
        android:inputType="textEmailAddress" />

    <TextView
        android:text="@string/officeNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtOfficeNo"
        android:background="#ffffffff"
        android:inputType="phone" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtPhone"
        android:background="#ffffffff"
        android:inputType="phone" />

    <TextView
        android:text="@string/purl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtpic"
        android:background="#ffffffff"
        android:inputType="text" />

    <TextView
        android:text="@string/priv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:id="@+id/txtpriv"
        android:background="#ffffffff"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/save_staff"
        android:textSize="25sp"
        android:id="@+id/btnSaveStaff"
        android:background="#fffba222"
        android:textColor="#ffffff"/>
</LinearLayout>
</HorizontalScrollView>
    </ScrollView>