<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.testing.softcust.emuitapp.AddEvent"
    android:background="#000026"
    android:orientation="vertical"
    android:scrollbars="vertical">


    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtEventName"
            android:background="#ffffffff"
            android:inputType="text" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtEventType"
            android:background="#ffffffff"
            android:inputType="text" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtEventStartDate"
            android:background="#ffffffff"
            android:inputType="date" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtEventEndDate"
            android:background="#ffffffff"
            android:inputType="text" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtEventDesc"
            android:background="#ffffffff"
            android:inputType="text" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/event_sem_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/drp_event_semester_id"
            android:background="#ffffff">

        </Spinner>
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save_Event"
            android:textSize="25sp"
            android:id="@+id/btnSaveEvent"
            android:background="#fffba222"
            android:textColor="#ffffff"/>
    </TableRow>

</TableLayout>
