<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.testing.softcust.emuitapp.CourseCategory"
    android:background="#000026"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/Category_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtCategoryID"
            android:background="#ffffffff"
            android:inputType="text" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/Category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtCategoryName"
            android:background="#ffffffff"
            android:inputType="text" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:text="@string/cat_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="336dp"
            android:layout_height="34dp"
            android:id="@+id/txtCategoryDesc"
            android:background="#ffffffff"
            android:inputType="text" />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save_cat"
            android:textSize="25sp"
            android:id="@+id/btnSaveCategory"
            android:background="#fffba222"
            android:textColor="#ffffff"/>
    </TableRow>

</TableLayout>
