<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000026"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:context="com.testing.softcust.emuitapp.login"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imgLoginLogo"
        android:layout_gravity="top"
        android:src="@drawable/emu"
        />

    <TextView
        android:text="@string/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername"
        android:layout_gravity="right"
        android:background="#ffffffff"
        android:layout_weight="0.09"
        android:inputType="text" />

    <TextView
        android:text="@string/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:layout_gravity="right"
        android:background="#ffffffff"
        android:layout_weight="0.09"
        android:inputType="textPassword" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/login_button"
        android:textSize="25sp"
        android:id="@+id/loginButton"
        android:background="#fffba222"
        android:textColor="#ffffff"/>


</LinearLayout>
